# GP-Model

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/: eval.py  export.py  merge_datasets.py  run_inference.py  train.py
configs/: file_demo.yaml  laptop.yaml  rtsp_demo.yaml
datasets/: README.md  class_map.example.yaml  example_data.yaml
docker/: compose.yaml  mediamtx.yml
notebooks/: train_weapon_colab.ipynb
src/gpmodel/: __init__.py  __main__.py  cli.py
src/gpmodel/config/: __init__.py  factory.py  loader.py  schema.py
src/gpmodel/core/: __init__.py  dispatcher.py  events.py  interfaces.py  types.py
src/gpmodel/detectors/: __init__.py  sahi.py  yolo.py
src/gpmodel/export/: __init__.py  benchmark.py  exporter.py
src/gpmodel/pipeline/: __init__.py  engine.py
src/gpmodel/publishers/: __init__.py  console.py  jsonl.py  metrics.py
src/gpmodel/reid/: __init__.py  encoder.py  face_db.py
src/gpmodel/rules/: __init__.py  base.py  crowd.py  geofence.py  intruder.py  weapon.py
src/gpmodel/sources/: __init__.py  base.py  file.py  rtsp.py  threaded.py  webcam.py
src/gpmodel/telemetry/: __init__.py  logging.py  perf.py
src/gpmodel/trackers/: __init__.py  bytetrack.py
src/gpmodel/training/: __init__.py  evaluator.py  merge.py  trainer.py
tests/config/: test_factory.py  test_loader.py
tests/core/: test_dispatcher.py  test_types.py
tests/detectors/: test_sahi.py  test_yolo.py
tests/export/: test_benchmark.py  test_exporter.py
tests/pipeline/: test_engine.py
tests/publishers/: test_console.py  test_jsonl.py  test_metrics.py
tests/reid/: test_face_db.py
tests/rules/: conftest.py  test_base.py  test_crowd.py  test_geofence.py  test_intruder.py  test_weapon.py
tests/sources/: test_file_source.py  test_rtsp.py  test_threaded.py
tests/telemetry/: test_perf.py
tests/trackers/: test_bytetrack.py
tests/training/: test_evaluator.py  test_merge.py  test_trainer.py
tools/: convert_model.py  download_model.py
