[project]
name = "gpmodel"
version = "0.1.0"
description = "Real-time security drone detection engine (YOLO11 + ByteTrack, Apple Silicon optimized)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Turki Alrowithi" }]
keywords = ["computer-vision", "yolo", "drone", "security", "surveillance"]

dependencies = [
    "ultralytics>=8.3.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "opencv-python>=4.10.0",
    "numpy>=1.26,<3",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "structlog>=24.4",
    "rich>=13.9",
    "shapely>=2.0",
    "supervision>=0.24",
    "onnxruntime>=1.19",
]

[project.optional-dependencies]
face = [
    "insightface>=0.7.3",
    "onnxruntime>=1.19",
]
export = [
    # coremltools 9.0 has a torch-converter regression on torch >=2.10
    # (https://github.com/apple/coremltools/issues/2521). 8.3 is the last
    # known-good combo on Apple Silicon.
    "coremltools==8.3.*",
    "onnx>=1.17",
]

[project.scripts]
gpmodel = "gpmodel.cli:main"

[project.urls]
Repository = "https://github.com/Turki-Alrowithi/GP-Model"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpmodel"]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    "types-PyYAML>=6.0",
]

# ── Ruff ────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "apps", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # allow function call as default argument (common in Pydantic)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "ultralytics.*",
    "insightface.*",
    "onnxruntime.*",
    "shapely.*",
]
ignore_missing_imports = true

# ── Pytest ──────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=gpmodel --cov-report=term-missing"
markers = [
    "integration: requires external resources (camera, network)",
    "slow: long-running tests",
]

[tool.coverage.run]
source = ["src/gpmodel"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
